// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render FormLogin with validation 1`] = `
<form
  action="#"
  className="sign-in__form"
  onSubmit={[Function]}
>
  <div
    className="sign-in__message"
  >
    <p>
      Please enter a valid email address
    </p>
    <p>
      Password must be at least 6 characters
    </p>
    <p>
      Review text must be at least 50 and no more than 400 characters
    </p>
  </div>
  <div
    className="sign-in__fields"
  >
    <div
      className="sign-in__field "
    >
      <input
        className="sign-in__input"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder="Email address"
        type="email"
        value="aliciaketzueki@gmail.com"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="email"
      >
        Email address
      </label>
    </div>
    <div
      className="sign-in__field "
    >
      <input
        className="sign-in__input"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="12345678990"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="password"
      >
        Password
      </label>
    </div>
  </div>
  <div
    className="sign-in__submit"
  >
    <button
      className="sign-in__btn"
      disabled={false}
      type="submit"
    >
      Sign in
    </button>
  </div>
</form>
`;

exports[`Render FormLogin without validation 1`] = `
<form
  action="#"
  className="sign-in__form"
  onSubmit={[Function]}
>
  <div
    className="sign-in__message"
  >
    <p>
      Please enter a valid email address
    </p>
    <p>
      Password must be at least 6 characters
    </p>
    <p>
      Review text must be at least 50 and no more than 400 characters
    </p>
  </div>
  <div
    className="sign-in__fields"
  >
    <div
      className="sign-in__field "
    >
      <input
        className="sign-in__input"
        id="email"
        name="email"
        onChange={[Function]}
        placeholder="Email address"
        type="email"
        value="aliciaketzueki@gmail.com"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="email"
      >
        Email address
      </label>
    </div>
    <div
      className="sign-in__field "
    >
      <input
        className="sign-in__input"
        id="password"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="12345678990"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="password"
      >
        Password
      </label>
    </div>
  </div>
  <div
    className="sign-in__submit"
  >
    <button
      className="sign-in__btn"
      disabled={true}
      type="submit"
    >
      Sign in
    </button>
  </div>
</form>
`;
